force-app/main/default/objects/Envelope_Place_Template__c/fields/Capture_As__c.field-meta.xml
<CustomField>
    <fullName>Capture_As__c</fullName>
    <label>Capture As</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>