force-app/main/default/objects/Envelope_Place_Template__c/fields/Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Format__c</fullName>
    <label>Date Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>MM/DD/YYYY</fullName>
                    <default>true</default>
                    <label>01/20/2025</label>
                </value>
                <value>
                    <fullName>YYYY-MM-DD</fullName>
                    <label>2025-01-20</label>
                </value>
                <value>
                    <fullName>MMMM D, YYYY</fullName>
                    <label>January 20, 2025</label>
                </value>
                <value>
                    <fullName>D MMM YYYY</fullName>
                    <label>20 Jan 2025</label>
                </value>
                 <value>
                    <fullName>MMMM Do YYYY</fullName>
                    <label>January 20th 2025</label>
                </value>                               
                <value>
                    <fullName>ddd, MMM D, YYYY</fullName>
                    <label>Mon, Jan 20, 2025</label>
                </value>
                <value>
                    <fullName>dddd, MMMM D, YYYY</fullName>
                    <label>Monday, January 20, 2025</label>
                </value>
                <value>
                    <fullName>YYYY-MM-DD HH:mm:ss</fullName>
                    <label>2025-01-20 14:30:00</label>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>