force-app/main/default/objects/Envelope_Place_Template__c/fields/Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Font_Size__c</fullName>
    <label>Font Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>