force-app/main/default/objects/Envelope_Place_Template__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <length>80</length>
    <type>Text</type>
    <inlineHelpText>Format of the input field. e.g. email, zipcode-us, /^[a-z0-9]{1,10}$/</inlineHelpText>
</CustomField>