force-app/main/default/objects/Envelope_Place_Template__c/fields/Format_Message__c.field-meta.xml
<CustomField>
    <fullName>Format_Message__c</fullName>
    <label>Format Message</label>
    <length>80</length>
    <type>Text</type>
    <inlineHelpText>Message displayed when the input does not match the specified format.</inlineHelpText>
</CustomField>