force-app/main/default/objects/Envelope_Place_Template__c/fields/Hint__c.field-meta.xml
<CustomField>
    <fullName>Hint__c</fullName>
    <label>Hint</label>
    <length>80</length>
    <type>Text</type>
    <inlineHelpText>Tooltip that displays over text fields.</inlineHelpText>
</CustomField>