force-app/main/default/objects/Envelope_Place_Template__c/fields/Place_Key__c.field-meta.xml
<CustomField>
    <fullName>Place_Key__c</fullName>
    <label>Place Key</label>
    <length>32</length>
    <type>Text</type>
    <inlineHelpText>Unique key to identify this place within the template.  Must be lowercase letters, numbers, or underscores and begin with a letter.</inlineHelpText>
</CustomField>