force-app/main/default/objects/Envelope_Place_Template__c/fields/Place_Type__c.field-meta.xml
<CustomField>
    <fullName>Place_Type__c</fullName>
    <label>Place Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>signature</fullName>
                <default>true</default>
                <label>Signature</label>
            </value>
            <value>
                <fullName>initials</fullName>
                <label>Initials</label>
            </value>
            <value>
                <fullName>text_input</fullName>
                <label>Text</label>
            </value>
            <value>
                <fullName>checkbox</fullName>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>envelope_completed_date</fullName>
                <label>Envelope Completed Date</label>
            </value>
            <value>
                <fullName>recipient_completed_date</fullName>
                <label>Recipient Completed Date</label>
            </value>
            <value>
                <fullName>recipient_name</fullName>
                <label>Recipient Name</label>
            </value>
             <value>
                <fullName>recipient_email</fullName>
                <label>Recipient Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>