force-app/main/default/objects/Envelope_Place_Template__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <label>Prompt</label>
    <length>80</length>
    <type>Text</type>
    <inlineHelpText>Placeholder text for the input field.</inlineHelpText>
</CustomField>