force-app/main/default/objects/Envelope_Place_Template__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>required</fullName>
                <label>Required</label>
            </value>
            <value>
                <fullName>optional</fullName>
                <label>Optional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>