force-app/main/default/objects/Envelope_Place_Template__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Place Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <inlineHelpText>Width of the input field.</inlineHelpText>
</CustomField>